fix: missing change indicator for control change kind and scrollbar issue (#3244)
* fix: multiple issues

* review comments

* add testcase for unknown type control change

---------

--- a/packages/control-property-editor/src/App.scss
+++ b/packages/control-property-editor/src/App.scss
@@ -6,6 +6,7 @@ html {
 }
 body {
     background-color: var(--vscode-editor-background);
+    scrollbar-color: var(--vscode-scrollbarSlider-background) var( --vscode-scrollbar-shadow)
 }
 
 .app-container {
@@ -55,11 +56,6 @@ body {
 .app-panel-scroller {
     overflow-y: auto;
     overflow-x: hidden;
-    scrollbar-color: var(--vscode-scrollbarSlider-background) var( --vscode-scrollbar-shadow)
-}:hover {
-    scrollbar-color: var(--vscode-scrollbarSlider-hoverBackground) var( --vscode-scrollbar-shadow)
-}:active {
-    scrollbar-color: var(--vscode-scrollbarSlider-activeBackground) var( --vscode-scrollbar-shadow)
 }
 
 .app-panel-left {
